fixing responsiveness on mobile

--- a/scss/_front-page.scss
+++ b/scss/_front-page.scss
@@ -442,11 +442,10 @@ html {
   .container-header {
     letter-spacing: 2px;
     padding-bottom: 20px;
-    width: 36%;
+    width: 100%;
     height: 1%;
     padding: -1px;
     border-radius: 8%;
-    margin-left: 78px;
   }
 }
 
